add the checkSystem function & add the Mac exec